--- a/st.cmd.config
+++ b/st.cmd.config
@@ -46,6 +46,18 @@ NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
 NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
 NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
 NDROIConfigure("DET4.XY.ROI1", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET1.XY.ROI2", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY.ROI2", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY.ROI2", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY.ROI2", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET1.XY.ROI3", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY.ROI3", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY.ROI3", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY.ROI3", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET1.XY.ROI4", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY.ROI4", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY.ROI4", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY.ROI4", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of pixel event data
 NDStdArraysConfigure("DET1.XY.ARR", 100, 0, "DET1.XY", 0, -1, 0, 0)
@@ -58,6 +70,18 @@ NDStatsConfigure("DET1.XY.STAT1", 100, 0, "DET1.XY.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET1.XY.STAT2", 100, 0, "DET1.XY.ROI2", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET2.XY.STAT2", 100, 0, "DET2.XY.ROI2", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET3.XY.STAT2", 100, 0, "DET3.XY.ROI2", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET4.XY.STAT2", 100, 0, "DET4.XY.ROI2", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET1.XY.STAT3", 100, 0, "DET1.XY.ROI3", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET2.XY.STAT3", 100, 0, "DET2.XY.ROI3", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET3.XY.STAT3", 100, 0, "DET3.XY.ROI3", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET4.XY.STAT3", 100, 0, "DET4.XY.ROI3", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET1.XY.STAT4", 100, 0, "DET1.XY.ROI4", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET2.XY.STAT4", 100, 0, "DET2.XY.ROI4", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET3.XY.STAT4", 100, 0, "DET3.XY.ROI4", 0, -1, -1, 0, 0)
+NDStatsConfigure("DET4.XY.STAT4", 100, 0, "DET4.XY.ROI4", 0, -1, -1, 0, 0)
 
 # Plugins used for auto scaling
 
