Use autosave info tags. Currently this makes use of a non-standard set of areaDetector templates. Waiting for my changes to be accpeted into mainline master branch.

--- a/example/exampleApp/src/Makefile
+++ b/example/exampleApp/src/Makefile
@@ -51,8 +51,8 @@ include $(TOP)/configure/RULES
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
 
-EXAMPLE_REQ:
-	-mv /home/controls/var/ADnED/example.req /home/controls/var/ADnED/example.req.old
-	-sed 's/$$(P)/BL99:Det:ADnED:/g' $(ADNED)/ADnED.req.template > /home/controls/var/ADnED/example.req
+#EXAMPLE_REQ:
+#	-mv /home/controls/var/ADnED/example.req /home/controls/var/ADnED/example.req.old
+#	-sed 's/$$(P)/BL99:Det:ADnED:/g' $(ADNED)/ADnED.req.template > /home/controls/var/ADnED/example.req
 
-buildInstall: EXAMPLE_REQ
+#buildInstall: EXAMPLE_REQ
