Modify to use new NDROIStat plugin - currently testing this on ADCore branch.

--- a/st.cmd.config
+++ b/st.cmd.config
@@ -42,22 +42,26 @@ ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 
 #ROI plugins to do ROI on the pixel event data
-NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY.ROI1", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET1.XY.ROI2", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY.ROI2", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY.ROI2", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY.ROI2", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET1.XY.ROI3", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY.ROI3", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY.ROI3", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY.ROI3", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET1.XY.ROI4", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY.ROI4", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY.ROI4", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY.ROI4", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+NDROIStatConfigure("DET1.XY.ROISTAT", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET2.XY.ROISTAT", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET3.XY.ROISTAT", 100, 0, "DET3.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET4.XY.ROISTAT", 100, 0, "DET4.XY", 0, 8, -1, -1, 0, 0)
+#NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.XY.ROI1", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET1.XY.ROI2", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.XY.ROI2", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.XY.ROI2", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.XY.ROI2", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET1.XY.ROI3", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.XY.ROI3", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.XY.ROI3", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.XY.ROI3", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET1.XY.ROI4", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.XY.ROI4", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.XY.ROI4", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.XY.ROI4", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of pixel event data
 NDStdArraysConfigure("DET1.XY.ARR", 100, 0, "DET1.XY", 0, -1, 0, 0)
@@ -66,22 +70,22 @@ NDStdArraysConfigure("DET3.XY.ARR", 100, 0, "DET3.XY", 0, -1, 0, 0)
 NDStdArraysConfigure("DET4.XY.ARR", 100, 0, "DET4.XY", 0, -1, 0, 0)
 
 #Stats plugins for ROI on pixel event data
-NDStatsConfigure("DET1.XY.STAT1", 100, 0, "DET1.XY.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET1.XY.STAT2", 100, 0, "DET1.XY.ROI2", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.XY.STAT2", 100, 0, "DET2.XY.ROI2", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.XY.STAT2", 100, 0, "DET3.XY.ROI2", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.XY.STAT2", 100, 0, "DET4.XY.ROI2", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET1.XY.STAT3", 100, 0, "DET1.XY.ROI3", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.XY.STAT3", 100, 0, "DET2.XY.ROI3", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.XY.STAT3", 100, 0, "DET3.XY.ROI3", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.XY.STAT3", 100, 0, "DET4.XY.ROI3", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET1.XY.STAT4", 100, 0, "DET1.XY.ROI4", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.XY.STAT4", 100, 0, "DET2.XY.ROI4", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.XY.STAT4", 100, 0, "DET3.XY.ROI4", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.XY.STAT4", 100, 0, "DET4.XY.ROI4", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.XY.STAT1", 100, 0, "DET1.XY.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.XY.STAT2", 100, 0, "DET1.XY.ROI2", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.XY.STAT2", 100, 0, "DET2.XY.ROI2", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.XY.STAT2", 100, 0, "DET3.XY.ROI2", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.XY.STAT2", 100, 0, "DET4.XY.ROI2", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.XY.STAT3", 100, 0, "DET1.XY.ROI3", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.XY.STAT3", 100, 0, "DET2.XY.ROI3", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.XY.STAT3", 100, 0, "DET3.XY.ROI3", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.XY.STAT3", 100, 0, "DET4.XY.ROI3", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.XY.STAT4", 100, 0, "DET1.XY.ROI4", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.XY.STAT4", 100, 0, "DET2.XY.ROI4", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.XY.STAT4", 100, 0, "DET3.XY.ROI4", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.XY.STAT4", 100, 0, "DET4.XY.ROI4", 0, -1, -1, 0, 0)
 
 # Plugins used for auto scaling
 
