Modify XY array handling to use new ROIStat plugin (on ADCore branch on github). Remove use of local CSS var and replace with PV that can be autosaved.

--- a/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPixelPlugin.template
@@ -36,125 +36,61 @@ substitute "TYPE=Int32"
 substitute "FTVL=LONG"
 include "NDStdArrays.template"
 
-# Scaling ROI and Stats
+# ROI and Stats
 
-# Pixel X/Y ROI for auto scaling
-substitute "R=ADnED:Det$(DET):XY:ROIScale:"
-substitute "PORT=DET$(DET).XY.ROI.SCALE"
+substitute "R=ADnED:Det$(DET):XY:ROI:"
+substitute "PORT=DET$(DET).XY.ROI"
 substitute "NDARRAY_PORT=DET$(DET).XY"
 include "NDPluginBase.template"
-include "NDROI.template"
+include "NDROIStat8.template"
 
-# Pixel X/Y Stats for auto scaling
-substitute "R=ADnED:Det$(DET):XY:StatScale:"
-substitute "PORT=DET$(DET).XY.STAT.SCALE"
-substitute "NDARRAY_PORT=DET$(DET).XY.ROI.SCALE"
-include "NDPluginBase.template"
-substitute "NCHANS=1024"
-substitute "HIST_SIZE=1"
-substitute "XSIZE=1"
-substitute "YSIZE=1"
-include "NDStats.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:0:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Normal ROI and Stats (multiple)
+substitute "R=ADnED:Det$(DET):XY:ROI:1:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-substitute "R=ADnED:Det$(DET):XY:ROIStat:"
-substitute "PORT=DET$(DET).XY.ROISTAT"
-substitute "NDARRAY_PORT=DET$(DET).XY"
-include "NDPluginBase.template"
-include "NDROIStat.template"
-#substitute "DIM=X"
-#include "NDROI_End.template"
-#substitute "DIM=Y"
-#include "NDROI_End.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:2:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Pixel X/Y ROI1
-#substitute "R=ADnED:Det$(DET):XY:ROI1:"
-#substitute "PORT=DET$(DET).XY.ROI1"
-#substitute "NDARRAY_PORT=DET$(DET).XY"
-#include "NDPluginBase.template"
-#include "NDROI.template"
-#substitute "DIM=X"
-#include "NDROI_End.template"
-#substitute "DIM=Y"
-#include "NDROI_End.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:3:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Pixel X/Y Stats1
-#substitute "R=ADnED:Det$(DET):XY:Stat1:"
-#substitute "PORT=DET$(DET).XY.STAT1"
-#substitute "NDARRAY_PORT=DET$(DET).XY.ROI1"
-#include "NDPluginBase.template"
-#substitute "NCHANS=1024"
-#substitute "HIST_SIZE=1"
-#substitute "XSIZE=1"
-#substitute "YSIZE=1"
-#include "NDStats.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:4:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Pixel X/Y ROI2
-#substitute "R=ADnED:Det$(DET):XY:ROI2:"
-#substitute "PORT=DET$(DET).XY.ROI2"
-#substitute "NDARRAY_PORT=DET$(DET).XY"
-#include "NDPluginBase.template"
-#include "NDROI.template"
-#substitute "DIM=X"
-#include "NDROI_End.template"
-#substitute "DIM=Y"
-#include "NDROI_End.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:5:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Pixel X/Y Stats2
-#substitute "R=ADnED:Det$(DET):XY:Stat2:"
-#substitute "PORT=DET$(DET).XY.STAT2"
-#substitute "NDARRAY_PORT=DET$(DET).XY.ROI2"
-#include "NDPluginBase.template"
-#substitute "NCHANS=1024"
-#substitute "HIST_SIZE=1"
-#substitute "XSIZE=1"
-#substitute "YSIZE=1"
-#include "NDStats.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:6:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
-# Pixel X/Y ROI3
-#substitute "R=ADnED:Det$(DET):XY:ROI3:"
-#substitute "PORT=DET$(DET).XY.ROI3"
-#substitute "NDARRAY_PORT=DET$(DET).XY"
-#include "NDPluginBase.template"
-#include "NDROI.template"
-#substitute "DIM=X"
-#include "NDROI_End.template"
-#substitute "DIM=Y"
-#include "NDROI_End.template"
-
-# Pixel X/Y Stats3
-#substitute "R=ADnED:Det$(DET):XY:Stat3:"
-#substitute "PORT=DET$(DET).XY.STAT3"
-#substitute "NDARRAY_PORT=DET$(DET).XY.ROI3"
-#include "NDPluginBase.template"
-#substitute "NCHANS=1024"
-#substitute "HIST_SIZE=1"
-#substitute "XSIZE=1"
-#substitute "YSIZE=1"
-#include "NDStats.template"
-
-# Pixel X/Y ROI4
-#substitute "R=ADnED:Det$(DET):XY:ROI4:"
-#substitute "PORT=DET$(DET).XY.ROI4"
-#substitute "NDARRAY_PORT=DET$(DET).XY"
-#include "NDPluginBase.template"
-#include "NDROI.template"
-#substitute "DIM=X"
-#include "NDROI_End.template"
-#substitute "DIM=Y"
-#include "NDROI_End.template"
-
-# Pixel X/Y Stats4
-#substitute "R=ADnED:Det$(DET):XY:Stat4:"
-#substitute "PORT=DET$(DET).XY.STAT4"
-#substitute "NDARRAY_PORT=DET$(DET).XY.ROI4"
-#include "NDPluginBase.template"
-#substitute "NCHANS=1024"
-#substitute "HIST_SIZE=1"
-#substitute "XSIZE=1"
-#substitute "YSIZE=1"
-#include "NDStats.template"
+substitute "R=ADnED:Det$(DET):XY:ROI:7:"
+substitute "DIM=X"
+include "NDROI_End.template"
+substitute "DIM=Y"
+include "NDROI_End.template"
 
 
 
