--- a/st.cmd.config
+++ b/st.cmd.config
@@ -42,10 +42,11 @@ ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 
 #ROI plugins to do ROI on the pixel event data
-NDROIStatConfigure("DET1.XY.ROISTAT", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET2.XY.ROISTAT", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET3.XY.ROISTAT", 100, 0, "DET3.XY", 0, 8, -1, -1, 0, 0)
-NDROIStatConfigure("DET4.XY.ROISTAT", 100, 0, "DET4.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET1.XY.ROI", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET2.XY.ROI", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET3.XY.ROI", 100, 0, "DET3.XY", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET4.XY.ROI", 100, 0, "DET4.XY", 0, 8, -1, -1, 0, 0)
+# NOTE: ROI0 is used for auto scaling on the CSS image.
 #NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
 #NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
 #NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
@@ -90,14 +91,14 @@ NDStdArraysConfigure("DET4.XY.ARR", 100, 0, "DET4.XY", 0, -1, 0, 0)
 # Plugins used for auto scaling
 
 #ROI plugins to do ROI on the pixel event data to provide auto scaling
-NDROIConfigure("DET1.XY.ROI.SCALE", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.XY.ROI.SCALE", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.XY.ROI.SCALE", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.XY.ROI.SCALE", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET1.XY.ROI.SCALE", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.XY.ROI.SCALE", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.XY.ROI.SCALE", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.XY.ROI.SCALE", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
 #Stats plugins for ROI on pixel event data to provide an auto scaling PV
-NDStatsConfigure("DET1.XY.STAT.SCALE", 100, 0, "DET1.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.XY.STAT.SCALE", 100, 0, "DET2.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.XY.STAT.SCALE", 100, 0, "DET3.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.XY.STAT.SCALE", 100, 0, "DET4.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.XY.STAT.SCALE", 100, 0, "DET1.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.XY.STAT.SCALE", 100, 0, "DET2.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.XY.STAT.SCALE", 100, 0, "DET3.XY.ROI.SCALE", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.XY.STAT.SCALE", 100, 0, "DET4.XY.ROI.SCALE", 0, -1, -1, 0, 0)
 
 #End of st.cmd.config
