--- a/st.cmd.config
+++ b/st.cmd.config
@@ -16,10 +16,15 @@ NDROIConfigure("DET3.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET4.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 
 #ROI plugins to do ROI on the TOF spectrums
-NDROIConfigure("DET1.TOF.ROI1", 100, 0, "DET1.TOF", 0, -1, -1, 0, 0)
-NDROIConfigure("DET2.TOF.ROI1", 100, 0, "DET2.TOF", 0, -1, -1, 0, 0)
-NDROIConfigure("DET3.TOF.ROI1", 100, 0, "DET3.TOF", 0, -1, -1, 0, 0)
-NDROIConfigure("DET4.TOF.ROI1", 100, 0, "DET4.TOF", 0, -1, -1, 0, 0)
+NDROIStatConfigure("DET1.TOF.ROI", 100, 0, "DET1.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET2.TOF.ROI", 100, 0, "DET2.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET3.TOF.ROI", 100, 0, "DET3.TOF", 0, 8, -1, -1, 0, 0)
+NDROIStatConfigure("DET4.TOF.ROI", 100, 0, "DET4.TOF", 0, 8, -1, -1, 0, 0)
+
+#NDROIConfigure("DET1.TOF.ROI1", 100, 0, "DET1.TOF", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET2.TOF.ROI1", 100, 0, "DET2.TOF", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET3.TOF.ROI1", 100, 0, "DET3.TOF", 0, -1, -1, 0, 0)
+#NDROIConfigure("DET4.TOF.ROI1", 100, 0, "DET4.TOF", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of the TOF arrays
 NDStdArraysConfigure("DET1.TOF.ARR", 100, 0, "DET1.TOF", 0, -1, 0, 0)
@@ -28,10 +33,10 @@ NDStdArraysConfigure("DET3.TOF.ARR", 100, 0, "DET3.TOF", 0, -1, 0, 0)
 NDStdArraysConfigure("DET4.TOF.ARR", 100, 0, "DET4.TOF", 0, -1, 0, 0)
 
 #Stats plugins for ROI on TOF spectra
-NDStatsConfigure("DET1.TOF.STAT1", 100, 0, "DET1.TOF.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
-NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET1.TOF.STAT1", 100, 0, "DET1.TOF.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
+#NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
 # Plugins for pixel data
 
@@ -42,63 +47,16 @@ ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 
 #ROI plugins to do ROI on the pixel event data
+# NOTE: ROI0 is used for auto scaling on the CSS image.
 NDROIStatConfigure("DET1.XY.ROI", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET2.XY.ROI", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET3.XY.ROI", 100, 0, "DET3.XY", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET4.XY.ROI", 100, 0, "DET4.XY", 0, 8, -1, -1, 0, 0)
-# NOTE: ROI0 is used for auto scaling on the CSS image.
-#NDROIConfigure("DET1.XY.ROI1", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.XY.ROI1", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.XY.ROI1", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.XY.ROI1", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET1.XY.ROI2", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.XY.ROI2", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.XY.ROI2", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.XY.ROI2", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET1.XY.ROI3", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.XY.ROI3", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.XY.ROI3", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.XY.ROI3", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET1.XY.ROI4", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.XY.ROI4", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.XY.ROI4", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.XY.ROI4", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of pixel event data
 NDStdArraysConfigure("DET1.XY.ARR", 100, 0, "DET1.XY", 0, -1, 0, 0)
 NDStdArraysConfigure("DET2.XY.ARR", 100, 0, "DET2.XY", 0, -1, 0, 0)
 NDStdArraysConfigure("DET3.XY.ARR", 100, 0, "DET3.XY", 0, -1, 0, 0)
 NDStdArraysConfigure("DET4.XY.ARR", 100, 0, "DET4.XY", 0, -1, 0, 0)
-
-#Stats plugins for ROI on pixel event data
-#NDStatsConfigure("DET1.XY.STAT1", 100, 0, "DET1.XY.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.XY.STAT1", 100, 0, "DET2.XY.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.XY.STAT1", 100, 0, "DET3.XY.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.XY.STAT1", 100, 0, "DET4.XY.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET1.XY.STAT2", 100, 0, "DET1.XY.ROI2", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.XY.STAT2", 100, 0, "DET2.XY.ROI2", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.XY.STAT2", 100, 0, "DET3.XY.ROI2", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.XY.STAT2", 100, 0, "DET4.XY.ROI2", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET1.XY.STAT3", 100, 0, "DET1.XY.ROI3", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.XY.STAT3", 100, 0, "DET2.XY.ROI3", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.XY.STAT3", 100, 0, "DET3.XY.ROI3", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.XY.STAT3", 100, 0, "DET4.XY.ROI3", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET1.XY.STAT4", 100, 0, "DET1.XY.ROI4", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.XY.STAT4", 100, 0, "DET2.XY.ROI4", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.XY.STAT4", 100, 0, "DET3.XY.ROI4", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.XY.STAT4", 100, 0, "DET4.XY.ROI4", 0, -1, -1, 0, 0)
-
-# Plugins used for auto scaling
-
-#ROI plugins to do ROI on the pixel event data to provide auto scaling
-#NDROIConfigure("DET1.XY.ROI.SCALE", 100, 0, "DET1.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.XY.ROI.SCALE", 100, 0, "DET2.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.XY.ROI.SCALE", 100, 0, "DET3.XY", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.XY.ROI.SCALE", 100, 0, "DET4.XY", 0, -1, -1, 0, 0)
-#Stats plugins for ROI on pixel event data to provide an auto scaling PV
-#NDStatsConfigure("DET1.XY.STAT.SCALE", 100, 0, "DET1.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.XY.STAT.SCALE", 100, 0, "DET2.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.XY.STAT.SCALE", 100, 0, "DET3.XY.ROI.SCALE", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.XY.STAT.SCALE", 100, 0, "DET4.XY.ROI.SCALE", 0, -1, -1, 0, 0)
 
 #End of st.cmd.config
