Remove original ROI and Stats plugins for TOF spectrums.

--- a/st.cmd.config
+++ b/st.cmd.config
@@ -15,28 +15,17 @@ NDROIConfigure("DET2.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET3.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 NDROIConfigure("DET4.TOF", 100, 0, "NED", 0, -1, -1, 0, 0)
 
-#ROI plugins to do ROI on the TOF spectrums
+#ROI plugins to do ROI/Stats on the TOF spectrums (configure 8 by default)
 NDROIStatConfigure("DET1.TOF.ROI", 100, 0, "DET1.TOF", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET2.TOF.ROI", 100, 0, "DET2.TOF", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET3.TOF.ROI", 100, 0, "DET3.TOF", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET4.TOF.ROI", 100, 0, "DET4.TOF", 0, 8, -1, -1, 0, 0)
-
-#NDROIConfigure("DET1.TOF.ROI1", 100, 0, "DET1.TOF", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET2.TOF.ROI1", 100, 0, "DET2.TOF", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET3.TOF.ROI1", 100, 0, "DET3.TOF", 0, -1, -1, 0, 0)
-#NDROIConfigure("DET4.TOF.ROI1", 100, 0, "DET4.TOF", 0, -1, -1, 0, 0)
 
 #Standard arrays plugin for channel access visualisation of the TOF arrays
 NDStdArraysConfigure("DET1.TOF.ARR", 100, 0, "DET1.TOF", 0, -1, 0, 0)
 NDStdArraysConfigure("DET2.TOF.ARR", 100, 0, "DET2.TOF", 0, -1, 0, 0)
 NDStdArraysConfigure("DET3.TOF.ARR", 100, 0, "DET3.TOF", 0, -1, 0, 0)
 NDStdArraysConfigure("DET4.TOF.ARR", 100, 0, "DET4.TOF", 0, -1, 0, 0)
-
-#Stats plugins for ROI on TOF spectra
-#NDStatsConfigure("DET1.TOF.STAT1", 100, 0, "DET1.TOF.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
-#NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
 # Plugins for pixel data
 
@@ -46,7 +35,7 @@ ADnEDPixelROIConfig("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 ADnEDPixelROIConfig("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 ADnEDPixelROIConfig("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
 
-#ROI plugins to do ROI on the pixel event data
+#ROI plugins to do ROI on the pixel event data (configure 8 by default)
 # NOTE: ROI0 is used for auto scaling on the CSS image.
 NDROIStatConfigure("DET1.XY.ROI", 100, 0, "DET1.XY", 0, 8, -1, -1, 0, 0)
 NDROIStatConfigure("DET2.XY.ROI", 100, 0, "DET2.XY", 0, 8, -1, -1, 0, 0)
